--- a/src/View_controller/AddPart.fxml
+++ b/src/View_controller/AddPart.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="488.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AddPart">
+<AnchorPane prefHeight="488.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.AddPart">
    <children>
       <Label layoutX="40.0" layoutY="62.0" text="Add Part">
          <font>
