--- a/src/View_controller/ModifyProduct.fxml
+++ b/src/View_controller/ModifyProduct.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="604.0" prefWidth="977.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ModifyProduct">
+<AnchorPane prefHeight="604.0" prefWidth="977.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_controller.ModifyProduct">
    <children>
       <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="578.0" prefWidth="950.0" style="-fx-border-color: gray; -fx-border-radius: 15;">
          <children>
