--- a/src/View_controller/AddProduct.fxml
+++ b/src/View_controller/AddProduct.fxml
@@ -44,6 +44,7 @@
                   <TableColumn prefWidth="162.0" text="Price/ Cost per Unit" />
               </columns>
             </TableView>
+            <TextField layoutX="753.0" layoutY="14.0" />
          </children>
       </AnchorPane>
    </children>
