Getting View and Controller in order

--- a/src/View_controller/AddPart.fxml
+++ b/src/View_controller/AddPart.fxml
@@ -20,7 +20,6 @@
       <Label layoutX="306.0" layoutY="292.0" text="Min" />
       <RadioButton layoutX="193.0" layoutY="61.0" mnemonicParsing="false" text="In-House" />
       <RadioButton layoutX="347.0" layoutY="61.0" mnemonicParsing="false" text="Outsourced" />
-      <TextField layoutX="108.0" layoutY="126.0" />
       <TextField layoutX="108.0" layoutY="170.0" />
       <TextField layoutX="108.0" layoutY="210.0" />
       <TextField layoutX="108.0" layoutY="251.0" />
@@ -30,5 +29,6 @@
       <Button layoutX="163.0" layoutY="397.0" mnemonicParsing="false" text="Save" />
       <Button layoutX="256.0" layoutY="397.0" mnemonicParsing="false" text="Cancel" />
       <Label layoutX="28.0" layoutY="175.0" text="Name" />
+      <Label layoutX="108.0" layoutY="126.0" prefHeight="26.0" prefWidth="171.0" style="-fx-border-color: Black;" />
    </children>
 </AnchorPane>
