--- a/src/View_controller/MainScreen.fxml
+++ b/src/View_controller/MainScreen.fxml
@@ -32,11 +32,11 @@
                             </columns>
                         </TableView>
                         <TextField fx:id="partsSearchTxt" layoutX="183.0" layoutY="20.0" />
-                        <Button fx:id="searchPartsBtn" layoutX="368.0" layoutY="20.0" mnemonicParsing="false" text="Search" />
+                        <Button fx:id="searchPartsBtn" layoutX="368.0" layoutY="20.0" mnemonicParsing="false" onAction="#SearchPartsAct" text="Search" />
                     </children></AnchorPane>
                 <AnchorPane fx:id="ProductsScreen" layoutX="510.0" layoutY="79.0" prefHeight="310.0" prefWidth="476.0" style="-fx-border-color: gray; -fx-border-radius: 15;">
                     <children>
-                        <Button fx:id="deleteProductsBtn" layoutX="381.0" layoutY="260.0" mnemonicParsing="false" text="Delete" />
+                        <Button fx:id="deleteProductsBtn" layoutX="381.0" layoutY="260.0" mnemonicParsing="false" onAction="#deleteProduct" text="Delete" />
                         <Button fx:id="modifyProductsBtn" layoutX="311.0" layoutY="260.0" mnemonicParsing="false" onAction="#modifyProductsAct" text="Modify" />
                         <Button fx:id="addProductsBtn" layoutX="253.0" layoutY="260.0" mnemonicParsing="false" onAction="#addProductsAct" prefHeight="26.0" prefWidth="46.0" text="Add" />
                         <Label layoutX="23.0" layoutY="26.0" text="Product">
@@ -52,7 +52,7 @@
                             </columns>
                         </TableView>
                         <TextField fx:id="productsSearchTxt" layoutX="191.0" layoutY="21.0" />
-                        <Button fx:id="searchProductsBtn" layoutX="373.0" layoutY="21.0" mnemonicParsing="false" text="Search" />
+                        <Button fx:id="searchProductsBtn" layoutX="373.0" layoutY="21.0" mnemonicParsing="false" onAction="#SearchProductsAct" text="Search" />
                     </children></AnchorPane>
                 <Label layoutX="14.0" layoutY="36.0" prefHeight="38.0" prefWidth="310.0" text="Inventory Management System">
                     <font>
@@ -60,6 +60,7 @@
                     </font>
                 </Label>
                 <Button fx:id="exitBtn" layoutX="893.0" layoutY="400.0" mnemonicParsing="false" onAction="#exitProgramButton" text="Exit" />
+            <Button fx:id="refreshBtn" layoutX="473.0" layoutY="400.0" mnemonicParsing="false" onAction="#RefreshAct" text="Refresh" />
             </children></AnchorPane>
     </children>
 </GridPane>
